--- a/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/Cabecera.razor
@@ -453,7 +453,7 @@
 
                 if (drmAdecuado == true)
                 {
-                    bool fechaEncaja = Herramientas.JuegoFicha.CalcularAntiguedad(oferta);
+                    bool fechaEncaja = Herramientas.Calculadora.CalcularAntiguedad(oferta);
 
                     if (fechaEncaja == true)
                     {
