--- a/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
+++ b/pepeizqs deals web/Pages/Componentes/Secciones/UltimosAnadidos.razor
@@ -198,7 +198,7 @@
 		{
 			foreach (var precio in juego.PrecioActualesTiendas)
 			{
-				bool fechaEncaja = Herramientas.JuegoFicha.CalcularAntiguedad(precio);
+				bool fechaEncaja = Herramientas.Calculadora.CalcularAntiguedad(precio);
 
 				if (fechaEncaja == true)
 				{
