--- a/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
+++ b/pepeizqs deals web/Pages/Componentes/Admin/Bundles.razor
@@ -150,9 +150,9 @@
                                     <div style="display: flex; align-items: center; margin-top: 10px;">
                                         @if (bundle.Pick == false)
                                         {
-                                            <div style="width: 10%; margin-right: 20px;">
-                                                <label style="margin-bottom: 10px;">Tier:</label>
-                                                <div class="opciones-combobox">
+                                            <div style="display: flex; align-items: center; margin-right: 20px;">
+                                                <label style="margin-right: 10px;">Tier:</label>
+                                                <div class="opciones-combobox" style="min-width: 100px;">
                                                     <select @onchange="@(e => CambiarTierJuego(e, juego))" value="@juego.Tier.Posicion">
                                                         @if (bundle.Tiers != null)
                                                         {
@@ -169,9 +169,9 @@
                                             </div>
                                         }
 
-                                        <div style="width: 33%;">
-                                            <label style="margin-bottom: 10px;">DRM:</label>
-                                            <div class="opciones-combobox">
+                                        <div style="display: flex; align-items: center;">
+                                            <label style="margin-right: 10px;">DRM:</label>
+                                            <div class="opciones-combobox" style="min-width: 100px;">
                                                 <select @onchange="@(e => CambiarDRMJuego(e, juego))" value="@juego.DRM">
                                                     @foreach (Juegos.DRM drm in Juegos.JuegoDRM2.GenerarListado())
                                                     {
